--- a/index.html
+++ b/index.html
@@ -4,9 +4,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Risky Kurniawan</title>
+
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ephesis&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="top-container bg-1">
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon text-light"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav m-auto pe-5">
+                <ul class="navbar-nav fs-1">
+                    <li class="nav-item active">
+                        <a href="#" class="text-decoration-none text-white"> Why Choose Us?</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="text-decoration-none text-white"> About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="text-decoration-none text-white"> Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="text-decoration-none d-block"><div class="mb-2"><img src="images/git.png" alt=""></div></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="text-decoration-none text-white"> Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="text-decoration-none text-white"> Testimonials</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="text-decoration-none text-white"> Contact Me</a>
+                    </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+
+        <h1 class="text-white header-1 pe-3">Hi There!</h1>
+        
+        <h2 class="text-white header-2 text-center">I'm Risky Kurniawan</h2> 
+        <div class="text-center">
+            <svg xmlns="http://www.w3.org/2000/svg" width="1090.599" height="52.047" viewBox="0 0 1090.599 52.047">
+                <path id="Path_1" data-name="Path 1" d="M313.483,370.993c1280-2.831,1078.547-51.06,1078.547-51.06" transform="translate(-313.482 -319.447)" fill="none" stroke="#fff" stroke-width="1"/>
+            </svg>
+        </div>
+        <h3 class="text-white header-3 text-center">A Fullstack Web Developer</h3>
+        <div class="abstract-1">
+            <svg xmlns="http://www.w3.org/2000/svg" width="256.491" height="573.471" viewBox="0 0 256.491 573.471">
+                <path id="Path_2" data-name="Path 2" d="M83.485,540c318.26,267.942,293.631,372.14,171.581,403.768s31.607,126.9,42.143,169.2" transform="translate(-83.163 -539.617)" fill="none" stroke="#fff" stroke-width="1"/>
+            </svg>      
+        </div>    
+        <div class="middle-container"></div>
+    </div>
+    <div class="middle-container">
+
+    </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
