--- a/index.html
+++ b/index.html
@@ -16,33 +16,33 @@
 </head>
 <body>
     <div class="top-container bg-1">
-        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon text-light"></span>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+            <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav m-auto pe-5">
-                <ul class="navbar-nav fs-1">
+                <ul class="navbar-nav fs-3">
                     <li class="nav-item active">
-                        <a href="#" class="text-decoration-none text-white"> Why Choose Us?</a>
+                        <a href="#" class="text-decoration-none text-white effect-underline"> Why Choose Us?</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="text-decoration-none text-white"> About Me</a>
+                        <a href="#" class="text-decoration-none text-white effect-underline"> About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="text-decoration-none text-white"> Skills</a>
+                        <a href="#" class="text-decoration-none text-white effect-underline"> Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="text-decoration-none d-block"><div class="mb-2"><img src="images/git.png" alt=""></div></a>
+                        <a href="https://github.com/rrisskyy/portfolio" class="text-decoration-none d-block"><div class="mb-2 text-center"><img src="images/git.png" alt="" class="git"></div></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="text-decoration-none text-white"> Portfolio</a>
+                        <a href="#" class="text-decoration-none text-white effect-underline"> Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="text-decoration-none text-white"> Testimonials</a>
+                        <a href="#" class="text-decoration-none text-white effect-underline"> Testimonials</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#" class="text-decoration-none text-white"> Contact Me</a>
+                        <a href="#" class="text-decoration-none text-white effect-underline"> Contact Me</a>
                     </li>
                 </ul>
               </div>
@@ -51,19 +51,18 @@
 
         <h1 class="text-white header-1 pe-3">Hi There!</h1>
         
-        <h2 class="text-white header-2 text-center">I'm Risky Kurniawan</h2> 
-        <div class="text-center">
-            <svg xmlns="http://www.w3.org/2000/svg" width="1090.599" height="52.047" viewBox="0 0 1090.599 52.047">
-                <path id="Path_1" data-name="Path 1" d="M313.483,370.993c1280-2.831,1078.547-51.06,1078.547-51.06" transform="translate(-313.482 -319.447)" fill="none" stroke="#fff" stroke-width="1"/>
-            </svg>
+        <h2 class="text-white header-2">I'm Risky Kurniawan</h2> 
+        <div class="text-center mb-1 underline-name">
+            <svg xmlns="http://www.w3.org/2000/svg" width="816.504" height="52.036" viewBox="0 0 816.504 52.036">
+                <path id="Path_1" data-name="Path 1" d="M313.483,370.993c958.155-2.831,807.357-51.06,807.357-51.06" transform="translate(-313.481 -319.457)" fill="none" stroke="#fff" stroke-width="1"/>
+              </svg>              
         </div>
-        <h3 class="text-white header-3 text-center">A Fullstack Web Developer</h3>
+        <h3 class="header-3">A Fullstack Web Developer</h3>
         <div class="abstract-1">
             <svg xmlns="http://www.w3.org/2000/svg" width="256.491" height="573.471" viewBox="0 0 256.491 573.471">
                 <path id="Path_2" data-name="Path 2" d="M83.485,540c318.26,267.942,293.631,372.14,171.581,403.768s31.607,126.9,42.143,169.2" transform="translate(-83.163 -539.617)" fill="none" stroke="#fff" stroke-width="1"/>
             </svg>      
         </div>    
-        <div class="middle-container"></div>
     </div>
     <div class="middle-container">
 
