--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </ul>
                 </div>
             </nav>
-            <h1 class="text-white header-1 pe-3" id="writeAnimation"></h1>
+<!--             <h1 class="text-white header-1 pe-3" id="writeAnimation"></h1> -->
             <h2 class="text-white header-2">I'm Risky Kurniawan</h2> 
             <div class="text-center mb-1 abstract-2">
                 <svg xmlns="http://www.w3.org/2000/svg" width="509.737" height="52.005" viewBox="0 0 509.737 52.005">
@@ -113,7 +113,7 @@
     <script>
       AOS.init();
     </script>
-    <script>
+<!--     <script>
         var i = 0;
         var txt = 'Hi There!,';
         var speed = 500;
@@ -125,7 +125,7 @@
             }
         }
         typeWriter()
-    </script>
+    </script> -->
     <script src="js/script.js"></script>
 </body>
 </html>
