--- a/index.html
+++ b/index.html
@@ -104,18 +104,18 @@
                             <div data-aos="fade-right" data-aos-duration="1500">
                                 <div class="skills-container">
                                     <ul class="text-white float-start logo-start">
-                                        <li class="pt-2"></li><a href="https://icons8.com/icons/set/html-5" target="_blank"><img class="img-logo" data-aos="fade-left" data-aos-duration="500" src="images/icons8-html-5.svg" alt=""></a></li>
-                                        <li class="pt-2"><a href="https://icons8.com/icons/set/css-logo" target="_blank"><img class="img-logo" data-aos="fade-left" data-aos-duration="900"src="images/icons8-css3.svg" alt=""></a></li>
-                                        <li class="pt-2"><a href="https://nodejs.org/en/" target="_blank"><img class="img-logo" data-aos="fade-left" data-aos-duration="1400"src="images/nodejs-new-pantone-white.svg" alt=""></a></li>
-                                        <li class="pt-2"><a href="https://uxwing.com/express-js-icon/" target="_blank"><img class="img-logo" data-aos="fade-left" data-aos-duration="1700"src="images/expressjs.svg" alt=""></a></li>
+                                        <li class="pt-2"></li><a href="https://icons8.com/icons/set/html-5" target="_blank"><img class="img-logo" data-aos="fade-left" data-aos-duration="500" data-aos-offset="250" src="images/icons8-html-5.svg" alt=""></a></li>
+                                        <li class="pt-2"><a href="https://icons8.com/icons/set/css-logo" target="_blank"><img class="img-logo" data-aos="fade-left" data-aos-duration="900" data-aos-offset="200" src="images/icons8-css3.svg" alt=""></a></li>
+                                        <li class="pt-2"><a href="https://nodejs.org/en/" target="_blank"><img class="img-logo" data-aos="fade-left" data-aos-duration="1400" data-aos-offset="150" src="images/nodejs-new-pantone-white.svg" alt=""></a></li>
+                                        <li class="pt-2"><a href="https://uxwing.com/express-js-icon/" target="_blank"><img class="img-logo" data-aos="fade-left" data-aos-duration="1700" data-aos-offset="100" src="images/expressjs.svg" alt=""></a></li>
                                     </ul>
                                 </div>
                                 
                                 <div class="skills-container">
                                     <ul class="text-white float-end logo-end">
-                                        <li class="pt-2"><a href="https://www.python.org/" target="_blank"><img class="img-logo"  data-aos="fade-right" data-aos-duration="500" src="images/python.svg" alt=""></a></li>
-                                        <li class="pt-2"><a href="https://www.freepnglogos.com/pics/javascript" target="_blank"><img class="img-logo"  data-aos="fade-right" data-aos-duration="900" src="images/javascript-39404.png" alt=""></a></li>
-                                        <li class="pt-2"><a href="https://www.php.net/download-logos.php" target="_blank"><img class="img-logo"  data-aos="fade-right" data-aos-duration="1400" src="images/php-original.svg" alt=""></a></li> 
+                                        <li class="pt-2"><a href="https://www.python.org/" target="_blank"><img class="img-logo"  data-aos="fade-right" data-aos-duration="500" data-aos-offset="250" src="images/python.svg" alt=""></a></li>
+                                        <li class="pt-2"><a href="https://www.freepnglogos.com/pics/javascript" target="_blank"><img class="img-logo"  data-aos="fade-right" data-aos-duration="900" data-aos-offset="200" src="images/javascript-39404.png" alt=""></a></li>
+                                        <li class="pt-2"><a href="https://www.php.net/download-logos.php" target="_blank"><img class="img-logo"  data-aos="fade-right" data-aos-duration="1400" data-aos-offset="150" src="images/php-original.svg" alt=""></a></li> 
                                     </ul>
                                 </div>
                                 <div class="bg-transparent img-container">
@@ -128,11 +128,11 @@
                         </div>
 
                     <div class="col-md-6 text-white text-justify pb-5">
-                        <div data-aos="fade-left" data-aos-duration="1500">
+                        <div data-aos="fade-left" data-aos-duration="1000">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ex eos assumenda tempora non facilis illo Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor asperiores sequi explicabo, eos facere tempora officia ipsum recusandae, hic esse consectetur quae alias a placeat odit vel ab facilis fugit. dignissimos soluta, quo quis dolorum vitae quisquam a voluptates nobis iure ducimus nemo eligendi!
                                 Lorem ipsum dolor sit amet consectetur adipisicing as.</p>
-                            <div class="row mt-5" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500">
-                                <div class="col-2 text-center ">
+                            <div class="row mt-5" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" data-aos-offset="100">
+                                <div class="col-2 text-center">
                                     <i class='bx bxs-graduation'></i>
                                 </div>
                                 <div class="col-10 m-auto">
@@ -154,12 +154,12 @@
                     <h1 class="header-4 text-uppercase text-center pt-3 mb-1">Portfolio</h1>
                 </div>
                 <div class="row text-white text-center pb-5 m-auto">
-                    <div class="col-lg-4 pt-5"><a href="https://rrisskyy.github.io/cv/" target="_blank"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1500" src="images/portfolio2.png" width="370px" height="200px" alt="toko pancing"></a></div>
-                    <div class="col-lg-4 pt-5"><a href="https://rrisskyy.github.io/toko_pancing/" target="_blank"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1500" src="images/portfolio1.png" width="370px" height="200px" alt="toko pancing"></a></div>
-                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1500" src="images/efe.png" width="370px" height="200px" alt=""></div>
-                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1500" src="images/efe.png" width="370px" height="200px" alt=""></div>
-                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1500" src="images/efe.png" width="370px" height="200px" alt=""></div>
-                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1500" src="images/efe.png" width="370px" height="200px" alt=""></div>
+                    <div class="col-lg-4 pt-5"><a href="https://rrisskyy.github.io/cv/" target="_blank"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/portfolio2.png" width="370px" height="200px" alt="toko pancing"></a></div>
+                    <div class="col-lg-4 pt-5"><a href="https://rrisskyy.github.io/toko_pancing/" target="_blank"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/portfolio1.png" width="370px" height="200px" alt="toko pancing"></a></div>
+                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/efe.png" width="370px" height="200px" alt=""></div>
+                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/efe.png" width="370px" height="200px" alt=""></div>
+                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/efe.png" width="370px" height="200px" alt=""></div>
+                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/efe.png" width="370px" height="200px" alt=""></div>
                     <div id="testimonials"></div> <!-- just for smoothscroll-->
                 </div>
             </div>
