Fix Width for Phone

--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
                     <h1 class="header-4 text-uppercase text-center pt-3 mb-1">Portfolio</h1>
                 </div>
                 <div class="row text-white text-center pb-5 m-auto">
-                    <div class="col-lg-4 pt-5"><a href="https://rrisskyy.github.io/cv/" target="_blank"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/portfolio2.png" width="370px" height="200px" alt="toko pancing"></a></div>
-                    <div class="col-lg-4 pt-5"><a href="https://rrisskyy.github.io/toko_pancing/" target="_blank"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/portfolio1.png" width="370px" height="200px" alt="toko pancing"></a></div>
-                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/efe.png" width="370px" height="200px" alt=""></div>
-                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/efe.png" width="370px" height="200px" alt=""></div>
-                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/efe.png" width="370px" height="200px" alt=""></div>
-                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/efe.png" width="370px" height="200px" alt=""></div>
+                    <div class="col-lg-4 pt-5"><a href="https://rrisskyy.github.io/cv/" target="_blank"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/portfolio2.png" class="img-portfolio" alt="toko pancing"></a></div>
+                    <div class="col-lg-4 pt-5"><a href="https://rrisskyy.github.io/toko_pancing/" target="_blank"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/portfolio1.png" class="img-portfolio" alt="toko pancing"></a></div>
+                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/efe.png" class="img-portfolio" alt=""></div>
+                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/efe.png" class="img-portfolio" alt=""></div>
+                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/efe.png" class="img-portfolio" alt=""></div>
+                    <div class="col-lg-4 pt-5"><img data-aos="zoom-in-left" data-aos-delay="300" data-aos-duration="1000" src="images/efe.png" class="img-portfolio" alt=""></div>
                     <div id="testimonials"></div> <!-- just for smoothscroll-->
                 </div>
             </div>
