--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Risky Kurniawan</title>
 
-
-    <link rel="icon" type="image/ico" href="images/favicon.ico">
+    <link rel="icon" type="image/png" href="images/favicon.png">
 
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
