--- a/index.html
+++ b/index.html
@@ -128,14 +128,16 @@
 
                     <div class="col-md-6 text-white text-justify pb-5">
                         <div data-aos="fade-left" data-aos-duration="1000">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ex eos assumenda tempora non facilis illo Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor asperiores sequi explicabo, eos facere tempora officia ipsum recusandae, hic esse consectetur quae alias a placeat odit vel ab facilis fugit. dignissimos soluta, quo quis dolorum vitae quisquam a voluptates nobis iure ducimus nemo eligendi!
+                            <p class="about-me-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel ex eos assumenda tempora non facilis illo Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor asperiores sequi explicabo, eos facere tempora officia ipsum recusandae, hic esse consectetur quae alias a placeat odit vel ab facilis fugit. dignissimos soluta, quo quis dolorum vitae quisquam a voluptates nobis iure ducimus nemo eligendi!
                                 Lorem ipsum dolor sit amet consectetur adipisicing as.</p>
                             <div class="row mt-5" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" data-aos-offset="100">
                                 <div class="col-2 text-center">
                                     <i class='bx bxs-graduation'></i>
                                 </div>
                                 <div class="col-10 m-auto">
-                                    I study at Mulawarman University in Bachelor of Computer Science
+                                    <p  class="about-me-desc">
+                                        I study at Mulawarman University in Bachelor of Computer Science
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -176,7 +178,7 @@
                             <div class="testimonials-img-container"><img class="rounded-circle mb-4 testimonials-img" src="images/person-1.jpg" alt=""></div>
                         </li>
                         <li>
-                            <p><i class='bx bxs-quote-alt-left fs-4'></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta molestias temporibus recusandae totam quos error exercitationem quod ea corrupti nam deserunt distinctio, beatae fugit quas harum, ducimus quo ad magnam.<i class='bx bxs-quote-alt-right fs-4'></i></p>
+                            <p class="testimonials-text"><i class='bx bxs-quote-alt-left fs-4'></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta molestias temporibus recusandae totam quos error exercitationem quod ea corrupti nam deserunt distinctio, beatae fugit quas harum, ducimus quo ad magnam.<i class='bx bxs-quote-alt-right fs-4'></i></p>
                         </li>
                     </ul>
                 </div>
@@ -186,7 +188,7 @@
                             <div class="testimonials-img-container"><img class="rounded-circle mb-4 testimonials-img" src="images/person-2.jpg" alt=""></div>
                         </li>
                         <li>
-                            <p><i class='bx bxs-quote-alt-left fs-4'></i>Lorem ipsum dolor sit amet consectetur adipisicing elit vero impedit? Minus dicta quam hic laudantium tempore repudiandae et modi, aliquid iusto ratione, cum officiis beatae dolorum recusandae doloremque dolore nostrum ullam magnam. Assumenda iusto ut repellendus magnam nesciunt minus est!<i class='bx bxs-quote-alt-right fs-4'></i></p>
+                            <p class="testimonials-text"><i class='bx bxs-quote-alt-left fs-4'></i>Lorem ipsum dolor sit amet consectetur adipisicing elit vero impedit? Minus dicta quam hic laudantium tempore repudiandae et modi, aliquid iusto ratione, cum officiis beatae dolorum recusandae doloremque dolore nostrum ullam magnam. Assumenda iusto ut repellendus magnam nesciunt minus est!<i class='bx bxs-quote-alt-right fs-4'></i></p>
                         </li>
                     </ul>
                 </div>
@@ -196,7 +198,7 @@
                             <div class="testimonials-img-container"><img class="rounded-circle mb-4 testimonials-img" src="images/person-3.jpg" alt=""></div>
                         </li>
                         <li>
-                            <p><i class='bx bxs-quote-alt-left fs-4'></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta molestias temporibus recusandae totam quos error exercitationem quod ea corrupti nam deserunt distinctio, beatae fugit quas harum, ducimus quo ad magnam.<i class='bx bxs-quote-alt-right fs-4'></i></p>
+                            <p class="testimonials-text"><i class='bx bxs-quote-alt-left fs-4'></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta molestias temporibus recusandae totam quos error exercitationem quod ea corrupti nam deserunt distinctio, beatae fugit quas harum, ducimus quo ad magnam.<i class='bx bxs-quote-alt-right fs-4'></i></p>
                         </li>
                     </ul>
                 </div>
